circle cl config v1 64