@@ -15,6 +15,14 @@ tasks.withType(Test) {
     jacoco.includeNoLocationClasses = true
 }
 
+test {
+    jvmArgs "-javaagent:${configurations.codeCoverage.singleFile}=destfile=${buildDirName}/coverage-results/jacoco.exec,sessionid=HSServ,append=false",
+            'Djacoco=true',
+            '-Xms128m',
+            '-Xmx512m',
+            '-XX:MaxPermSize=128m'
+}
+
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
 
     reports {
